[tool.poetry]
name = "keep-alive"
version = "0.1.0"
description = ""
authors = ["soohian <shonendumm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
sqlalchemy = "^2.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
